--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <title>FLAPPY BIRD</title>
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Teko:700">
+  
 </head>
+  
 <body>
-  <canvas id="game-view"></canvas>
-</body>
+  <canvas id="game-view" width="320" height="480"></canvas>
   <script src="script.js"></script>
+</body>
 </html>
